[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "packages/core",
    "packages/platform",
    "packages/node"
]

[workspace.dependencies]
dioxus = { version = "0.7.7" }

# workspace
ui = { path = "packages/ui" }
